// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users selectors  - myUser 1`] = `
Object {
  "address": "myUserAddres",
  "firstName": "myUserName",
  "lastName": "myUserLastName",
  "nickname": "myUser",
}
`;

exports[`users selectors  - username 1`] = `
Object {
  "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  "firstName": "testname",
  "lastName": "testlastname",
  "nickname": "nickname",
}
`;

exports[`users selectors  - users 1`] = `
Object {
  "address": Object {
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname",
  },
  "address2": Object {
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
    "firstName": "testname2",
    "lastName": "testlastname2",
    "nickname": "nickname2",
  },
  "myUser": Object {
    "address": "myUserAddres",
    "firstName": "myUserName",
    "lastName": "myUserLastName",
    "nickname": "myUser",
  },
}
`;
